--- a/routes.yaml
+++ b/routes.yaml
@@ -101,3 +101,54 @@ spec:
     weight: 100
 type: ingress-route
 ---
+api: /v1/config/projects/{project}/routing/ingress/{id}
+meta:
+  id: generativeaiservice
+  project: unotech
+spec:
+  modify:
+    headers:
+    - key: userid
+      op: set
+      value: auth.userId
+    - key: tenant
+      op: set
+      value: auth.tenantId
+    - key: roles
+      op: set
+      value: auth.roles
+    - key: principal
+      op: set
+      value: auth.sub
+    outputFormat: yaml
+    requestTemplate: ""
+    responseTemplate: ""
+    template: go
+  project: unotech
+  rule:
+    rule: and
+    clauses:
+      - rule: authenticated
+      - rule: match
+        eval: in
+        type: string
+        f2: args.auth.roles
+        f1: USER
+  source:
+    hosts:
+    - '*'
+    methods:
+    - '*'
+    port: 0
+    rewrite: /generativeaisrvc/store_data
+    type: prefix
+    url: /generativeaisrvc/store_data
+  targets:
+  - host: generativeaiservice.unotech.svc.cluster.local
+    port: 8080
+    scheme: http
+    type: ""
+    version: ""
+    weight: 100
+type: ingress-route
+---
